css/style.scss
$tablet: 1200px;
$mobile: 768px;
$xsmall: 360px;

@mixin row($gap: 1rem, $justify: space-between, $items: center) {
  display: flex;
  justify-content: $justify;
  align-items: $items;
  gap: $gap;
}

@mixin col($gap: 2rem, $justify: space-between, $items: center) {
  display: flex;
  flex-direction: column;
  justify-content: $justify;
  align-items: $items;
  gap: $gap;
}

@mixin shadow() {
  box-shadow: 0px 6px 50px 5px rgba(0, 0, 0, 0.05);
}

@font-face {
  font-family: main-regular;
  src: url(../fonts/Poppins/Poppins-Regular.ttf);
}
@font-face {
  font-family: main-medium;
  src: url(../fonts/Poppins/Poppins-Medium.ttf);
}
@font-face {
  font-family: main-semibold;
  src: url(../fonts/Poppins/Poppins-SemiBold.ttf);
}
@font-face {
  font-family: main-bold;
  src: url(../fonts/Poppins/Poppins-Bold.ttf);
}
@font-face {
  font-family: main-medium-italic;
  src: url(../fonts/Poppins/Poppins-MediumItalic.ttf);
}

:root {
  --main-clr: #2657a4;
  --light-clr: #e9eef6;
  --sec-clr: #51565e;
}

body {
  overflow-x: hidden;
}

*,
*::before,
*::after {
  box-sizing: border-box;
  transition: all 0.3s ease-in-out;
  scroll-behavior: smooth;
}

a,
li,
ul,
button,
input {
  all: unset;
}

a,
button,
nav li,
.burger,
.close,
.social img,
.features figure,
.pricing .card,
.toggle {
  cursor: pointer;
}

img {
  object-fit: cover;
  max-width: 100%;
  height: 100%;
}

h1,
h2,
h3 {
  color: #060e1a;
}

h1 {
  font: 62px main-bold, sans serif;
}
h2 {
  font-size: 30px;
  font-family: main-semibold, sans serif;
  margin-bottom: 3rem;
}
h3 {
  font-size: 25px;
  font-family: main-medium, sans serif;
  margin-bottom: 2rem;
}
h4 {
  font-size: 22px;
  font-family: main-medium, sans serif;
  color: var(--sec-clr);
}
h5 {
  font-size: 16px;
  font-family: main-regular, sans serif;
}
p {
  font-size: 18px;
  font-family: main-regular, sans serif;
  color: var(--sec-clr);
  line-height: 1.6;
}
span {
  color: var(--main-clr);
}

button,
.btn {
  background-color: var(--main-clr);
  padding: 15px 30px;
  border: 1px solid var(--main-clr);
  border-radius: 5px;
  color: #fff;
  font-size: 20px;
  font-family: main-medium, sans-serif;
  white-space: nowrap;
  &:hover {
    background-color: var(--light-clr);
    color: var(--main-clr);
  }
}

.flex {
  display: flex;
}

.hide {
  display: none;
}

.container {
  margin: 0 auto;
  padding: 0 1rem;
}

@media (min-width: 576px) {
  .container {
    max-width: 540px;
  }
}

@media (min-width: 768px) {
  .container {
    max-width: 720px;
  }
}

@media (min-width: 992px) {
  .container {
    max-width: 960px;
  }
}

@media (min-width: 1200px) {
  .container {
    max-width: 1140px;
  }
}

main {
  @include col(7rem);
}

.hero header {
  padding: 1rem 2rem;
  @include row(1rem, space-between);
}

nav {
  @include row(3rem);
  font: 18px main-regular;
  color: var(--sec-clr);
}

.nav-icon {
  position: absolute;
  width: 30px;
  height: 30px;
  top: 1.5rem;
  right: 3rem;
  z-index: 3;
}

nav a:not(:last-child) {
  position: relative;
  &:after {
    transform: scaleX(0);
    transform-origin: left;
    content: "";
    background-image: linear-gradient(
      to right,
      var(--main-clr),
      var(--light-clr)
    );
    width: 100%;
    height: 2px;
    position: absolute;
    bottom: 0;
    left: 0;
  }
  &:hover::after {
    transform: scaleX(1);
  }
}

@media (width > $tablet) {
  .nav-icon {
    display: none;
  }
}

@media (max-width: $tablet) {
  nav {
    display: none;
    min-height: 100vh;
    width: 100%;
    left: 0;
    top: 0;
    position: fixed;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    gap: 1rem;
    padding: 2rem;
    background-color: rgba(242, 245, 250, 0.8);
    backdrop-filter: blur(5px);
    color: #060e1a;
    z-index: 2;
    a {
      font: 20px main-semibold;
    }
  }
}

.fixed-header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  padding: 0 3rem;
  background-color: rgba(242, 245, 250, 0.8);
  backdrop-filter: blur(5px);
  z-index: 2;
}

@media (max-width: $tablet) {
  .fixed-header {
    padding: 0.5rem;
  }
}

header {
  padding: 1rem;
}

.hero {
  margin-bottom: 7rem;
  background-image: linear-gradient(to bottom right, #d8eff2, #d3d0e1);
  .container {
    @include col(5rem, initial, initial);
  }
  header,
  .hero-wrapper {
    @include row(2rem);
  }
  padding-bottom: 7rem;
  .text {
    flex-basis: 50%;
    @include col(2rem, space-between, start);
  }
}

@media (max-width: $tablet) {
  .hero .hero-wrapper {
    @include col();
    flex-direction: column-reverse;
    .text {
      align-items: center;
      text-align: center;
      padding-bottom: 5rem;
    }
  }
}

.preview {
  margin-bottom: 7rem;
  .container {
    @include row(2rem, space-around, stretch);
    position: relative;
  }
  img:nth-child(1) {
    position: absolute;
    object-fit: contain;
    height: auto;
    top: 0;
    left: 0;
    z-index: -1;
  }
  .text {
    flex-basis: 30%;
    @include col(3rem, space-between, start);

    @for $i from 1 through 3 {
      div:nth-child(#{$i + 1}) h3:before {
        content: url("../svgs/pre-#{$i}.png");
        margin-right: 1rem;
      }
    }
  }
}

@media (max-width: $tablet) {
  .preview .container {
    @include col(1rem, center);
  }
}

.features {
  margin-bottom: 7rem;
  text-align: center;
  .features-wrapper {
    @include row(2rem, center);
    flex-wrap: wrap;
  }
  figure {
    position: relative;
    background-color: #fff;
    padding: 2rem;
    border-radius: 5px;
    @include shadow();
    flex-basis: 18%;
    min-width: 240px;
    &:after {
      content: url("./svgs/arrow.png");
      display: block;
      margin-top: 1rem;
    }
    img {
      margin-bottom: 3rem;
    }
    &:before {
      transform: scaleY(0);
      transform-origin: bottom;
      content: "";
      background-image: linear-gradient(to bottom, #fff, var(--main-clr));
      position: absolute;
      width: 102%;
      height: 100%;
      top: 3px;
      left: -1%;
      border-radius: 5px;
      z-index: -1;
    }
    &:hover::before {
      transform: scaleY(1);
    }
  }
}

@media (max-width: $mobile) {
  .features figure {
    min-width: 180px;
    padding: 1rem;
  }
}

.pricing {
  margin-bottom: 7rem;
  .pricing-header {
    text-align: center;
    @include col();
  }
  .flex {
    align-self: center;
    @include row(0.5rem, center);
    margin-bottom: 1rem;
  }
  .selected {
    font: 20px main-semibold;
    color: var(--main-clr);
  }
  .right {
    margin-left: auto;
  }
  .toggle {
    background-color: var(--light-clr);
    width: 80px;
    height: 30px;
    border-radius: 20px;
    padding: 0 5px;
    @include row();
    span {
      display: block;
      background-color: var(--main-clr);
      width: 30px;
      height: 20px;
      border-radius: 20px;
    }
  }
  .cards-wrapper {
    margin-top: 4rem;
    @include row(4rem, center);
    flex-wrap: wrap;
  }
  .card {
    position: relative;
    background-color: #fff;
    @include col(2rem);
    @include shadow();
    border-radius: 10px;
    padding: 2rem;
    header {
      @include col(0, start);
      text-align: center;
      z-index: 1;
    }
    span {
      font: 20px main-semibold;
      color: #060e1a;
    }
    &:hover {
      header * {
        color: #fff !important;
      }
      button {
        background-color: var(--main-clr);
        color: var(--light-clr);
      }
    }
    p {
      margin-bottom: 1rem;
    }
    button {
      background-color: var(--light-clr);
      color: var(--main-clr);
    }
  }
  .card::before {
    content: "";
    background-image: url("/svgs/wave.svg");
    background-size: cover;
    background-position: bottom;
    background-repeat: no-repeat;
    width: 100%;
    height: 35%;
    transform: scaleY(0);
    transform-origin: top;
    position: absolute;
    top: 0;
    left: 0;
  }
  .card:after {
    transform: scaleY(0);
    transform-origin: top;
    content: "";
    background-image: linear-gradient(to bottom, #fff, var(--main-clr));
    position: absolute;
    border-radius: 10px;
    width: 102%;
    height: 100%;
    top: 5px;
    left: -1%;
    z-index: -2 !important;
  }
  .card:hover {
    &::before,
    &::after {
      transform: scaleY(1);
    }
  }
}

@media (max-width: $tablet) {
  .pricing .cards-wrapper {
    grid-template-columns: repeat(2, 1fr);
  }
}
@media (max-width: $mobile) {
  .pricing {
    .cards-wrapper {
      grid-template-columns: repeat(1, 1fr);
    }
    .card {
      padding: 1rem;
    }
    .selected {
      font-size: 12px;
    }
  }
}

.review {
  margin-bottom: 7rem;
  header {
    text-align: center;
    margin: 0 auto 3rem;
  }
  .map {
    position: relative;
    left: 0;
    top: 0;
    background-image: url("../imgs/map.png"),
      linear-gradient(to right, var(--light-clr), #fff);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    width: 100%;
    height: 700px;
    img {
      width: 50px;
      height: 50px;
      position: absolute;
      &:nth-child(1) {
        top: 15%;
        left: 10%;
      }
      &:nth-child(2) {
        top: 45%;
        left: 45%;
      }
      &:nth-child(3) {
        top: 25%;
        left: 75%;
      }
      &:nth-child(4) {
        top: 70%;
        left: 15%;
      }
      &:nth-child(5) {
        top: 75%;
        left: 80%;
      }
    }
    p {
      font: 9px main-medium-italic;
    }
    h6 {
      font: 14px main-regular;
    }
    span {
      font: 8px main-regular;
    }
  }
}

.news {
  margin-bottom: 7rem;
  h2 {
    text-align: center;
  }
  .wrapper {
    @include row(2rem, center, start);
    flex-wrap: wrap;
  }
  figure {
    flex-basis: 40%;
  }
  span,
  h5 {
    white-space: nowrap;
  }
  .spans {
    @include row();
  }
  img {
    width: 100%;
    margin-bottom: 2rem;
  }
  figcaption {
    @include col(2rem, center, start);
    width: 70%;
    margin-left: 1rem;
  }
}

@media (max-width: $mobile) {
  .news {
    .wrapper {
      gap: 5rem;
    }
    figure {
      flex-basis: 100%;
      text-align: center;
    }
    figcaption {
      width: 100%;
      align-items: center;
      margin-left: 0;
    }
  }
}

footer {
  background-color: var(--light-clr);
  padding: 5rem 0;
  .container {
    @include row(1.5rem, space-between, start);
    flex-wrap: wrap;
  }
  .col {
    @include col(1rem, start, start);
    &:nth-child(1) {
      @include col(2rem, start, start);
      width: 330px;
    }
    &:nth-child(2) {
      width: 170px;
    }
    &:nth-child(3) {
      width: 170px;
    }
    &:nth-child(4) {
      width: 320px;
    }
  }

  h4 {
    color: #060e1a;
    margin-bottom: 1rem;
  }
  .social {
    @include row(1rem, start, start);
  }
  .email {
    border: 1px solid var(--main-clr);
    @include row(1rem, start, stretch);
    border-radius: 5px;
  }
  input {
    width: 100%;
    padding: 0 1rem;
    font: 18px main-semibold;

    &::placeholder {
      color: var(--sec-clr);
      font: 16px main-medium;
    }
  }
  .copy {
    margin-top: 4rem;
    text-align: center;
  }
}

@media (max-width: $mobile) {
  footer .email {
    @include row(1rem, space-between);
    input {
      max-width: 100px;
    }
  }
  .social img {
    width: 20px;
  }
}

@media (max-width: 360px) {
  .logo {
    width: 100px;
  }
  .nav-icon {
    width: 20px;
    height: 20px;
    right: 1.5rem;
  }
  h1 {
    font: 31px main-bold;
  }
  h2 {
    font: 15px main-semibold;
    margin-bottom: 3rem;
  }
  h3 {
    font: 12.5px main-medium;
    margin-bottom: 2rem;
  }
  h4 {
    font: 11px main-medium;
    color: var(--sec-clr);
  }
  h5 {
    font: 8px main-regular;
  }
  p {
    font: 9px main-regular;
    color: var(--sec-clr);
    line-height: 1.6;
  }
  span {
    color: var(--main-clr);
  }
  button,
  input,
  input::placeholder {
    font: 10px main-medium !important;
  }
}

